start populating list of entries

--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -41,98 +41,13 @@
 				<h3>
 					B
 				</h3>
-				<ul>
-					<li><a href="/locations/other-crime-scene/babi-yar/index.html">Babi Yar</a></li>
-					<li><a href="/witnesses/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
-					<li><a href="/witnesses/victim/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
-					<li><a href="/locations/other-crime-scene/bad-nenndorf/index.html">Bad Nenndorf</a></li>
-					<li><a href="/witnesses/victim/bahir-moshe/index.html">Bahir, Moshe</a></li>
-					<li><a href="/locations/country/baltic-countries/index.html">Baltic Countries</a></li>
-					<li><a href="/witnesses/victim/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li>
-					<li><a href="/witnesses/victim/bartel-erwin/index.html">Bartel, Erwin</a></li>
-					<li><a href="/witnesses/barton-russell/index.html">Barton, Russell</a></li>
-					<li><a href="/witnesses/victim/baskind-ber/index.html">Baskind, Ber</a></li>
-					<li><a href="/witnesses/victim/baum-bruno/index.html">Baum, Bruno</a></li>
-					<li><a href="/witnesses/perpetrator/becher-kurt/index.html">Becher, Kurt</a></li>
-					<li><a href="/witnesses/perpetrator/becker-august/index.html">Becker, August</a></li>
-					<li><a href="/persons/legal-professional/bednarz-wladyslaw/index.html">Bednarz, Władysław</a></li>
-					<li><a href="/witnesses/victim/beer-abraham/index.html">Beer, Abraham</a></li>
-					<li><a href="/witnesses/victim/behr-emil/index.html">Behr, Emil</a></li>
-					<li><a href="/locations/country/belgium/index.html">Belgium</a></li>
-					<li><a href="/b/belzec/index.html">Belzec</a></li>
-					<li><a href="/legal/trial/belzec-trial/index.html">Belzec Trial</a></li>
-					<li><a href="/witnesses/victim/bendel-charles-s/index.html">Bendel, Charles S.</a></li>
-					<li><a href="/witnesses/victim/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li>
-					<li><a href="/witnesses/victim/benroubi-maurice/index.html">Benroubi, Maurice</a></li>
-					<li><a href="/persons/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li>
-					<li><a href="/instruments/camp/other-camp/bergen-belsen/index.html">Bergen-Belsen</a></li>
-					<li><a href="/legal/trial/bergen-belsen-trial/index.html">Bergen-Belsen Trial</a></li>
-					<li><a href="/witnesses/victim/berger-oskar/index.html">Berger, Oskar</a></li>
-					<li><a href="/witnesses/victim/berlyant-semen/index.html">Berlyant, Semen</a></li>
-					<li><a href="/witnesses/victim/bialek-regina/index.html">Bialek, Regina</a></li>
-					<li><a href="/locations/other-crime-scene/bialystok/index.html">Białystok</a></li>
-					<li><a href="/witnesses/false-witness/bily-henry/index.html">Bily, Henry</a></li>
-					<li><a href="/witnesses/victim/bimko-ada/index.html">Bimko, Ada</a></li>
-					<li><a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a></li>
-					<li><a href="/locations/other-locations/birobidzhan/index.html">Birobidzhan</a></li>
-					<li><a href="/witnesses/victim/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li>
-					<li><a href="/witnesses/victim/blaha-franz/index.html">Blaha, Franz</a></li>
-					<li><a href="/witnesses/victim/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li>
-					<li><a href="/witnesses/perpetrator/blobel-paul/index.html">Blobel, Paul</a></li>
-					<li><a href="/witnesses/victim/blyazer-a/index.html">Blyazer, A.</a></li>
-					<li><a href="/persons/legal-professional/bock-ludwig/index.html">Bock, Ludwig</a></li>
-					<li><a href="/witnesses/perpetrator/bock-richard/index.html">Böck, Richard</a></li>
-					<li><a href="/witnesses/perpetrator/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
-					<li><a href="/witnesses/victim/bomba-abraham/index.html">Bomba, Abraham</a></li>
-					<li><a href="/technologies/bone-mill/index.html">bone mill</a></li>
-					<li><a href="/witnesses/expert/bouard-michel-de/index.html">Boüard, Michel de</a></li>
-					<li><a href="/witnesses/victim/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
-					<li><a href="/locations/other-crime-scene/brest/index.html">Brest</a></li>
-					<li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
-					<li><a href="/witnesses/perpetrator/broad-pery-s/index.html">Broad, Pery S.</a></li>
-					<li><a href="/witnesses/victim/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
-					<li><a href="/locations/other-crime-scene/bronnaya-gora/index.html">Bronnaya Gora</a></li>
-					<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
-					<li><a href="/witnesses/victim/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li>
-					<li><a href="/witnesses/victim/budnik-david/index.html">Budnik, David</a></li>
-					<li><a href="/witnesses/victim/buki-milton/index.html">Buki, Milton</a></li>
-					<li><a href="/locations/country/bulgaria/index.html">Bulgaria</a></li>
-					<li><a href="/legal/company/buna/index.html">BUNA</a></li>
-					<li><a href="/b/bunkers/index.html">bunkers</a></li>
-					<li><a href="/witnesses/perpetrator/burmeister-walter/index.html">Burmeister, Walter</a></li>
-				</ul>
+				<div id="b-section">
+				</div>
 				<h3>
 					C
 				</h3>
-				<ul>
-					<li><a href="/c/camps/index.html">camps</a></li>
-					<li><a href="/c/carbon-monoxide/index.html">carbon monoxide</a></li>
-					<li><a href="/c/censorship/index.html">censorship</a></li>
-					<li><a href="/witnesses/victim/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
-					<li><a href="/witnesses/victim/chasan-shaul/index.html">Chasan, Shaul</a></li>
-					<li><a href="/c/chelmno/index.html">Chełmno</a></li>
-					<li><a href="/witnesses/victim/chomka-wladyslaw/index.html">Chomka, Władysław</a></li>
-					<li><a href="/witnesses/perpetrator/christophersen-thies/index.html">Christophersen, Thies</a></li>
-					<li><a href="/witnesses/victim/chybinski-stanislaw/index.html">Chybiński, Stanisław</a></li>
-					<li><a href="/categories/concepts/code-language/index.html">code language</a></li>
-					<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
-					<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
-					<li><a href="/categories/concepts/compensation/index.html">compensation</a></li>
-					<li><a href="/c/concentration-camps/index.html">concentration camps</a></li>
-					<li><a href="/categories/concepts/construction-office/index.html">construction office</a></li>
-					<li><a href="/categories/concepts/convergence-of-evidence/index.html">convergence of evidence</a></li>
-					<li><a href="/c/corpse-photos/index.html">corpse photos</a></li>
-					<li><a href="/witnesses/false-witness/corry-joe/index.html">Corry, Joe</a></li>
-					<li><a href="/manipulation/cremation-propaganda/index.html">cremation propaganda</a></li>
-					<li><a href="/c/crematoria/index.html">crematoria</a></li>
-					<li><a href="/categories/concepts/criminal-traces/index.html">criminal traces</a></li>
-					<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
-					<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
-					<li><a href="/witnesses/victim/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
-					<li><a href="/persons/propagandist/czech-danuta/index.html">Czech, Danuta</a></li>
-					<li><a href="/locations/country/czechia/index.html">Czechia</a></li>
-					<li><a href="/witnesses/victim/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
-				</ul>
+				<div id="c-section">
+				</div>
 				<h3>
 					D
 				</h3>
@@ -647,57 +562,13 @@
 				<h3>
 					V
 				</h3>
-				<ul>
-					<li><a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
-					<li><a href="/witnesses/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
-					<li><a href="/v/van-herwaarden-maria/index.html">van Herwaarden, Maria</a></li>
-					<li><a href="/persons/politician/van-roden-edward-l/index.html">van Roden, Edward L.</a></li>
-					<li><a href="/persons/politician/veil-simone/index.html">Veil, Simone</a></li>
-					<li><a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a></li>
-					<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
-					<li><a href="/technologies/ventilation/index.html">ventilation</a></li>
-					<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
-					<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
-				</ul>
+				<div id="v-section">
+				</div>
 				<h3>
 					W
 				</h3>
-				<ul>
-					<li><a href="/witnesses/false-witness/wael-monique-de/index.html">Wael, Monique de</a></li>
-					<li><a href="/witnesses/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a></li>
-					<li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li>
-					<li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li>
-					<li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
-					<li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li>
-					<li><a href="/witnesses/victim/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
-					<li><a href="/witnesses/false-witness/watt-donald/index.html">Watt, Donald</a></li>
-					<li><a href="/objects/wedding-rings/index.html">wedding rings</a></li>
-					<li><a href="/persons/politician/weise-gottfried/index.html">Weise, Gottfried</a></li>
-					<li><a href="/witnesses/victim/weiss-janda/index.html">Weiss, Janda</a></li>
-					<li><a href="/persons/propagandist/weissmandel-dov/index.html">Weissmandel, Dov</a></li>
-					<li><a href="/witnesses/victim/weliczker-leon/index.html">Weliczker, Leon</a></li>
-					<li><a href="/persons/legal-professional/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li>
-					<li><a href="/witnesses/perpetrator/wentritt-harry/index.html">Wentritt, Harry</a></li>
-					<li><a href="/witnesses/perpetrator/werner-kurt/index.html">Werner, Kurt</a></li>
-					<li><a href="/witnesses/victim/wetzler-alfred/index.html">Wetzler, Alfred</a></li>
-					<li><a href="/witnesses/perpetrator/widmann-albert/index.html">Widmann, Albert</a></li>
-					<li><a href="/witnesses/victim/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li>
-					<li><a href="/witnesses/victim/wiesel-elie/index.html">Wiesel, Elie</a></li>
-					<li><a href="/persons/propagandist/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li>
-					<li><a href="/witnesses/victim/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li>
-					<li><a href="/witnesses/victim/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
-					<li><a href="/persons/politician/wirth-christian/index.html">Wirth, Christian</a></li>
-					<li><a href="/witnesses/perpetrator/wirths-eduard/index.html">Wirths, Eduard</a></li>
-					<li><a href="/legal/institution/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungs-Hauptamt</a></li>
-					<li><a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
-					<li><a href="/legal/trial/witch-trials/index.html">witch trials</a></li>
-					<li><a href="/witnesses/witnesses/index.html">witnesses</a></li>
-					<li><a href="/witnesses/victim/witnesses-against-mass-murder/index.html">witnesses against mass murder</a></li>
-					<li><a href="/witnesses/victim/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
-					<li><a href="/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
-					<li><a href="/witnesses/victim/wolken-otto/index.html">Wolken, Otto</a></li>
-					<li><a href="/w/wolzek/index.html">Wolzek</a></li>
-				</ul>
+				<div id="w-section">
+				</div>
 				<h3>
 					Y
 				</h3>
@@ -706,18 +577,8 @@
 				<h3>
 					Z
 				</h3>
-				<ul>
-					<li><a href="/witnesses/victim/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
-					<li><a href="/witnesses/victim/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
-					<li><a href="/legal/institution/zentrale-stelle/index.html">Zentrale Stelle</a></li>
-					<li><a href="/locations/other-locations/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li>
-					<li><a href="/persons/politician/ziereis-franz/index.html">Ziereis, Franz</a></li>
-					<li><a href="/witnesses/victim/zlobnicki-adam/index.html">Źłobnicki, Adam</a></li>
-					<li><a href="/legal/trial/zundel-trials/index.html">Zündel Trials</a></li>
-					<li><a href="/witnesses/victim/zurawski-mieczyslaw/index.html">Żurawski, Mieczysław</a></li>
-					<li><a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a></li>
-					<li><a href="/technologies/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li>
-				</ul>
+				<div id="z-section">
+				</div>
 				<ul>
 					<li><a href="/bibliography/index.html">Bibliography</a></li>
 				</ul>
@@ -732,9 +593,17 @@
 <script>
 	$(document).ready(function() {
 		$( "#a-section" ).load( "/a/index.html #toc" );
+		$( "#b-section" ).load( "/b/index.html #toc" );
+		$( "#c-section" ).load( "/c/index.html #toc" );
 		$( "#q-section" ).load( "/q/index.html #toc" );
+		$( "#r-section" ).load( "/r/index.html #toc" );
+		$( "#s-section" ).load( "/s/index.html #toc" );
+		$( "#t-section" ).load( "/t/index.html #toc" );
 		$( "#u-section" ).load( "/u/index.html #toc" );
+		$( "#v-section" ).load( "/v/index.html #toc" );
+		$( "#w-section" ).load( "/w/index.html #toc" );
 		$( "#y-section" ).load( "/y/index.html #toc" );
+		$( "#z-section" ).load( "/z/index.html #toc" );
 	});
 </script>
 </body>
