--- a/v/index.html
+++ b/v/index.html
@@ -19,18 +19,20 @@
 			<h2>
 				V
 			</h2>
-			<ul>
-				<li><a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
-				<li><a href="/witnesses/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
-				<li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li>
-				<li><a href="/persons/politician/van-roden-edward-l/index.html">van Roden, Edward L.</a></li>
-				<li><a href="/persons/politician/veil-simone/index.html">Veil, Simone</a></li>
-				<li><a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a></li>
-				<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
-				<li><a href="/technologies/ventilation/index.html">Ventilation</a></li>
-				<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
-				<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
+					<li><a href="/witnesses/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
+					<li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li>
+					<li><a href="/persons/politician/van-roden-edward-l/index.html">van Roden, Edward L.</a></li>
+					<li><a href="/persons/politician/veil-simone/index.html">Veil, Simone</a></li>
+					<li><a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a></li>
+					<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
+					<li><a href="/technologies/ventilation/index.html">Ventilation</a></li>
+					<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
+					<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
