--- a/w/index.html
+++ b/w/index.html
@@ -20,43 +20,45 @@
 				W
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/witnesses/false-witness/wael-monique-de/index.html">Wael, Monique de</a></li>
-					<li><a href="/witnesses/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a></li>
-					<li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li>
-					<li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li>
-					<li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
-					<li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li>
-					<li><a href="/witnesses/victim/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
-					<li><a href="/witnesses/false-witness/watt-donald/index.html">Watt, Donald</a></li>
-					<li><a href="/objects/wedding-rings/index.html">Wedding Rings</a></li>
-					<li><a href="/persons/politician/weise-gottfried/index.html">Weise, Gottfried</a></li>
-					<li><a href="/witnesses/victim/weiss-janda/index.html">Weiss, Janda</a></li>
-					<li><a href="/persons/propagandist/weissmandel-dov/index.html">Weissmandel, Dov</a></li>
-					<li><a href="/witnesses/victim/weliczker-leon/index.html">Weliczker, Leon</a></li>
-					<li><a href="/persons/legal-professional/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li>
-					<li><a href="/witnesses/perpetrator/wentritt-harry/index.html">Wentritt, Harry</a></li>
-					<li><a href="/witnesses/perpetrator/werner-kurt/index.html">Werner, Kurt</a></li>
-					<li><a href="/witnesses/victim/wetzler-alfred/index.html">Wetzler, Alfred</a></li>
-					<li><a href="/witnesses/perpetrator/widmann-albert/index.html">Widmann, Albert</a></li>
-					<li><a href="/witnesses/victim/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li>
-					<li><a href="/witnesses/victim/wiesel-elie/index.html">Wiesel, Elie</a></li>
-					<li><a href="/persons/propagandist/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li>
-					<li><a href="/witnesses/victim/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li>
-					<li><a href="/witnesses/victim/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
-					<li><a href="/persons/politician/wirth-christian/index.html">Wirth, Christian</a></li>
-					<li><a href="/witnesses/perpetrator/wirths-eduard/index.html">Wirths, Eduard</a></li>
-					<li><a href="/legal/institution/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li>
-					<li><a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
-					<li><a href="/legal/trial/witch-trials/index.html">Witch Trials</a></li>
-					<li><a href="/witnesses/witnesses/index.html">Witnesses</a></li>
-					<li><a href="/witnesses/victim/witnesses-against-mass-murder/index.html">Witnesses against Mass Murder</a></li>
-					<li><a href="/witnesses/victim/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
-					<li><a href="/categories/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
-					<li><a href="/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
-					<li><a href="/witnesses/victim/wolken-otto/index.html">Wolken, Otto</a></li>
-					<li><a href="/w/wolzek/index.html">Wolzek</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/witnesses/false-witness/wael-monique-de/index.html">Wael, Monique de</a></li>
+						<li><a href="/witnesses/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a></li>
+						<li><a href="/w/wannsee-conference/index.html">Wannsee Conference</a></li>
+						<li><a href="/w/wannsee-protocol/index.html">Wannsee Protocol</a></li>
+						<li><a href="/w/war-refugee-board-report/index.html">War Refugee Board Report</a></li>
+						<li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a></li>
+						<li><a href="/witnesses/victim/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
+						<li><a href="/witnesses/false-witness/watt-donald/index.html">Watt, Donald</a></li>
+						<li><a href="/objects/wedding-rings/index.html">Wedding Rings</a></li>
+						<li><a href="/persons/politician/weise-gottfried/index.html">Weise, Gottfried</a></li>
+						<li><a href="/witnesses/victim/weiss-janda/index.html">Weiss, Janda</a></li>
+						<li><a href="/persons/propagandist/weissmandel-dov/index.html">Weissmandel, Dov</a></li>
+						<li><a href="/witnesses/victim/weliczker-leon/index.html">Weliczker, Leon</a></li>
+						<li><a href="/persons/legal-professional/wennerstrum-charles-f/index.html">Wennerstrum, Charles F.</a></li>
+						<li><a href="/witnesses/perpetrator/wentritt-harry/index.html">Wentritt, Harry</a></li>
+						<li><a href="/witnesses/perpetrator/werner-kurt/index.html">Werner, Kurt</a></li>
+						<li><a href="/witnesses/victim/wetzler-alfred/index.html">Wetzler, Alfred</a></li>
+						<li><a href="/witnesses/perpetrator/widmann-albert/index.html">Widmann, Albert</a></li>
+						<li><a href="/witnesses/victim/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel (Yankiel)</a></li>
+						<li><a href="/witnesses/victim/wiesel-elie/index.html">Wiesel, Elie</a></li>
+						<li><a href="/persons/propagandist/wiesenthal-simon/index.html">Wiesenthal, Simon</a></li>
+						<li><a href="/witnesses/victim/wijnberg-saartje/index.html">Wijnberg, Saartje</a></li>
+						<li><a href="/witnesses/victim/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
+						<li><a href="/persons/politician/wirth-christian/index.html">Wirth, Christian</a></li>
+						<li><a href="/witnesses/perpetrator/wirths-eduard/index.html">Wirths, Eduard</a></li>
+						<li><a href="/legal/institution/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li>
+						<li><a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
+						<li><a href="/legal/trial/witch-trials/index.html">Witch Trials</a></li>
+						<li><a href="/witnesses/witnesses/index.html">Witnesses</a></li>
+						<li><a href="/witnesses/victim/witnesses-against-mass-murder/index.html">Witnesses against Mass Murder</a></li>
+						<li><a href="/witnesses/victim/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
+						<li><a href="/categories/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
+						<li><a href="/witnesses/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
+						<li><a href="/witnesses/victim/wolken-otto/index.html">Wolken, Otto</a></li>
+						<li><a href="/w/wolzek/index.html">Wolzek</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
