--- a/z/index.html
+++ b/z/index.html
@@ -19,18 +19,20 @@
 			<h2>
 				Z
 			</h2>
-			<ul>
-				<li><a href="/witnesses/victim/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
-				<li><a href="/witnesses/victim/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
-				<li><a href="/legal/institution/zentrale-stelle/index.html">Zentrale Stelle</a></li>
-				<li><a href="/locations/other-locations/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li>
-				<li><a href="/persons/politician/ziereis-franz/index.html">Ziereis, Franz</a></li>
-				<li><a href="/witnesses/victim/zlobnicki-adam/index.html">Źłobnicki, Adam</a></li>
-				<li><a href="/legal/trial/zundel-trials/index.html">Zündel Trials</a></li>
-				<li><a href="/witnesses/victim/zurawski-mieczyslaw/index.html">Żurawski, Mieczysław</a></li>
-				<li><a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a></li>
-				<li><a href="/technologies/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li>
-			</ul>
+			<div id="toc">
+				<ul>
+					<li><a href="/witnesses/victim/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
+					<li><a href="/witnesses/victim/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
+					<li><a href="/legal/institution/zentrale-stelle/index.html">Zentrale Stelle</a></li>
+					<li><a href="/locations/other-locations/zentralsauna-auschwitz-birkenau/index.html">Zentralsauna, Auschwitz Birkenau</a></li>
+					<li><a href="/persons/politician/ziereis-franz/index.html">Ziereis, Franz</a></li>
+					<li><a href="/witnesses/victim/zlobnicki-adam/index.html">Źłobnicki, Adam</a></li>
+					<li><a href="/legal/trial/zundel-trials/index.html">Zündel Trials</a></li>
+					<li><a href="/witnesses/victim/zurawski-mieczyslaw/index.html">Żurawski, Mieczysław</a></li>
+					<li><a href="/toxins-chemicals/zyklon-b/index.html">Zyklon B</a></li>
+					<li><a href="/technologies/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
