--- a/b/index.html
+++ b/b/index.html
@@ -20,69 +20,71 @@
 				B
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/locations/other-crime-scene/babi-yar/index.html">Babi Yar</a></li>
-					<li><a href="/witnesses/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
-					<li><a href="/witnesses/victim/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
-					<li><a href="/locations/other-crime-scene/bad-nenndorf/index.html">Bad Nenndorf</a></li>
-					<li><a href="/witnesses/victim/bahir-moshe/index.html">Bahir, Moshe</a></li>
-					<li><a href="/locations/country/baltic-countries/index.html">Baltic Countries</a></li>
-					<li><a href="/witnesses/victim/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li>
-					<li><a href="/witnesses/victim/bartel-erwin/index.html">Bartel, Erwin</a></li>
-					<li><a href="/witnesses/barton-russell/index.html">Barton, Russell</a></li>
-					<li><a href="/witnesses/victim/baskind-ber/index.html">Baskind, Ber</a></li>
-					<li><a href="/witnesses/victim/baum-bruno/index.html">Baum, Bruno</a></li>
-					<li><a href="/witnesses/perpetrator/becher-kurt/index.html">Becher, Kurt</a></li>
-					<li><a href="/witnesses/perpetrator/becker-august/index.html">Becker, August</a></li>
-					<li><a href="/persons/legal-professional/bednarz-wladyslaw/index.html">Bednarz, Władysław</a></li>
-					<li><a href="/witnesses/victim/beer-abraham/index.html">Beer, Abraham</a></li>
-					<li><a href="/witnesses/victim/behr-emil/index.html">Behr, Emil</a></li>
-					<li><a href="/locations/country/belgium/index.html">Belgium</a></li>
-					<li><a href="/b/belzec/index.html">Belzec</a></li>
-					<li><a href="/legal/trial/belzec-trial/index.html">Belzec Trial</a></li>
-					<li><a href="/witnesses/victim/bendel-charles-s/index.html">Bendel, Charles S.</a></li>
-					<li><a href="/witnesses/victim/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li>
-					<li><a href="/witnesses/victim/benroubi-maurice/index.html">Benroubi, Maurice</a></li>
-					<li><a href="/persons/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li>
-					<li><a href="/instruments/camp/other-camp/bergen-belsen/index.html">Bergen-Belsen</a></li>
-					<li><a href="/legal/trial/bergen-belsen-trial/index.html">Bergen-Belsen Trials</a></li>
-					<li><a href="/witnesses/victim/berger-oskar/index.html">Berger, Oskar</a></li>
-					<li><a href="/witnesses/victim/berlyant-semen/index.html">Berlyant, Semen</a></li>
-					<li><a href="/witnesses/victim/bialek-regina/index.html">Bialek, Regina</a></li>
-					<li><a href="/locations/other-crime-scene/bialystok/index.html">Białystok</a></li>
-					<li><a href="/locations/other-crime-scene/rumbula/index.html">Bikernieki &rarr; Rumbula</a></li>
-					<li><a href="/witnesses/false-witness/bily-henry/index.html">Bily, Henry</a></li>
-					<li><a href="/witnesses/victim/bimko-ada/index.html">Bimko, Ada</a></li>
-					<li><a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a></li>
-					<li><a href="/locations/other-locations/birobidzhan/index.html">Birobidzhan</a></li>
-					<li><a href="/witnesses/victim/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li>
-					<li><a href="/witnesses/victim/blaha-franz/index.html">Blaha, Franz</a></li>
-					<li><a href="/witnesses/victim/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li>
-					<li><a href="/witnesses/perpetrator/blobel-paul/index.html">Blobel, Paul</a></li>
-					<li><a href="/witnesses/victim/blyazer-a/index.html">Blyazer, A.</a></li>
-					<li><a href="/persons/legal-professional/bock-ludwig/index.html">Bock, Ludwig</a></li>
-					<li><a href="/witnesses/perpetrator/bock-richard/index.html">Böck, Richard</a></li>
-					<li><a href="/witnesses/perpetrator/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
-					<li><a href="/witnesses/victim/bomba-abraham/index.html">Bomba, Abraham</a></li>
-					<li><a href="/technologies/bone-mill/index.html">Bone Mill</a></li>
-					<li><a href="/technology/bone-mill/index.html">Bone Mill</a></li>
-					<li><a href="/witnesses/expert/bouard-michel-de/index.html">Boüard, Michel de</a></li>
-					<li><a href="/witnesses/victim/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
-					<li><a href="/locations/other-crime-scene/brest/index.html">Brest</a></li>
-					<li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
-					<li><a href="/witnesses/perpetrator/broad-pery-s/index.html">Broad, Pery S.</a></li>
-					<li><a href="/witnesses/victim/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
-					<li><a href="/locations/other-crime-scene/bronnaya-gora/index.html">Bronnaya Gora</a></li>
-					<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
-					<li><a href="/witnesses/victim/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li>
-					<li><a href="/witnesses/victim/budnik-david/index.html">Budnik, David</a></li>
-					<li><a href="/witnesses/victim/buki-milton/index.html">Buki, Milton</a></li>
-					<li><a href="/locations/country/bulgaria/index.html">Bulgaria</a></li>
-					<li><a href="/legal/company/buna/index.html">BUNA</a></li>
-					<li><a href="/categories/concept/bunkers/index.html">Bunkers</a></li>
-					<li><a href="/b/bunkers/index.html">Bunkers</a></li>
-					<li><a href="/witnesses/perpetrator/burmeister-walter/index.html">Burmeister, Walter</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/locations/other-crime-scene/babi-yar/index.html">Babi Yar</a></li>
+						<li><a href="/witnesses/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
+						<li><a href="/witnesses/victim/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
+						<li><a href="/locations/other-crime-scene/bad-nenndorf/index.html">Bad Nenndorf</a></li>
+						<li><a href="/witnesses/victim/bahir-moshe/index.html">Bahir, Moshe</a></li>
+						<li><a href="/locations/country/baltic-countries/index.html">Baltic Countries</a></li>
+						<li><a href="/witnesses/victim/bard-nomberg-helena/index.html">Bard-Nomberg, Helena</a></li>
+						<li><a href="/witnesses/victim/bartel-erwin/index.html">Bartel, Erwin</a></li>
+						<li><a href="/witnesses/barton-russell/index.html">Barton, Russell</a></li>
+						<li><a href="/witnesses/victim/baskind-ber/index.html">Baskind, Ber</a></li>
+						<li><a href="/witnesses/victim/baum-bruno/index.html">Baum, Bruno</a></li>
+						<li><a href="/witnesses/perpetrator/becher-kurt/index.html">Becher, Kurt</a></li>
+						<li><a href="/witnesses/perpetrator/becker-august/index.html">Becker, August</a></li>
+						<li><a href="/persons/legal-professional/bednarz-wladyslaw/index.html">Bednarz, Władysław</a></li>
+						<li><a href="/witnesses/victim/beer-abraham/index.html">Beer, Abraham</a></li>
+						<li><a href="/witnesses/victim/behr-emil/index.html">Behr, Emil</a></li>
+						<li><a href="/locations/country/belgium/index.html">Belgium</a></li>
+						<li><a href="/b/belzec/index.html">Belzec</a></li>
+						<li><a href="/legal/trial/belzec-trial/index.html">Belzec Trial</a></li>
+						<li><a href="/witnesses/victim/bendel-charles-s/index.html">Bendel, Charles S.</a></li>
+						<li><a href="/witnesses/victim/bennahmias-daniel/index.html">Bennahmias, Daniel</a></li>
+						<li><a href="/witnesses/victim/benroubi-maurice/index.html">Benroubi, Maurice</a></li>
+						<li><a href="/persons/berg-isai-davidovich/index.html">Berg, Isai Davidovich</a></li>
+						<li><a href="/instruments/camp/other-camp/bergen-belsen/index.html">Bergen-Belsen</a></li>
+						<li><a href="/legal/trial/bergen-belsen-trial/index.html">Bergen-Belsen Trials</a></li>
+						<li><a href="/witnesses/victim/berger-oskar/index.html">Berger, Oskar</a></li>
+						<li><a href="/witnesses/victim/berlyant-semen/index.html">Berlyant, Semen</a></li>
+						<li><a href="/witnesses/victim/bialek-regina/index.html">Bialek, Regina</a></li>
+						<li><a href="/locations/other-crime-scene/bialystok/index.html">Białystok</a></li>
+						<li><a href="/locations/other-crime-scene/rumbula/index.html">Bikernieki &rarr; Rumbula</a></li>
+						<li><a href="/witnesses/false-witness/bily-henry/index.html">Bily, Henry</a></li>
+						<li><a href="/witnesses/victim/bimko-ada/index.html">Bimko, Ada</a></li>
+						<li><a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a></li>
+						<li><a href="/locations/other-locations/birobidzhan/index.html">Birobidzhan</a></li>
+						<li><a href="/witnesses/victim/biskovitz-yaakov/index.html">Biskovitz, Ya&rsquo;akov</a></li>
+						<li><a href="/witnesses/victim/blaha-franz/index.html">Blaha, Franz</a></li>
+						<li><a href="/witnesses/victim/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li>
+						<li><a href="/witnesses/perpetrator/blobel-paul/index.html">Blobel, Paul</a></li>
+						<li><a href="/witnesses/victim/blyazer-a/index.html">Blyazer, A.</a></li>
+						<li><a href="/persons/legal-professional/bock-ludwig/index.html">Bock, Ludwig</a></li>
+						<li><a href="/witnesses/perpetrator/bock-richard/index.html">Böck, Richard</a></li>
+						<li><a href="/witnesses/perpetrator/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
+						<li><a href="/witnesses/victim/bomba-abraham/index.html">Bomba, Abraham</a></li>
+						<li><a href="/technologies/bone-mill/index.html">Bone Mill</a></li>
+						<li><a href="/technology/bone-mill/index.html">Bone Mill</a></li>
+						<li><a href="/witnesses/expert/bouard-michel-de/index.html">Boüard, Michel de</a></li>
+						<li><a href="/witnesses/victim/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
+						<li><a href="/locations/other-crime-scene/brest/index.html">Brest</a></li>
+						<li><a href="/b/british-radio-intercepts/index.html">British Radio Intercepts</a></li>
+						<li><a href="/witnesses/perpetrator/broad-pery-s/index.html">Broad, Pery S.</a></li>
+						<li><a href="/witnesses/victim/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
+						<li><a href="/locations/other-crime-scene/bronnaya-gora/index.html">Bronnaya Gora</a></li>
+						<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
+						<li><a href="/witnesses/victim/buchholcowa-janina/index.html">Buchholcowa, Janina</a></li>
+						<li><a href="/witnesses/victim/budnik-david/index.html">Budnik, David</a></li>
+						<li><a href="/witnesses/victim/buki-milton/index.html">Buki, Milton</a></li>
+						<li><a href="/locations/country/bulgaria/index.html">Bulgaria</a></li>
+						<li><a href="/legal/company/buna/index.html">BUNA</a></li>
+						<li><a href="/categories/concept/bunkers/index.html">Bunkers</a></li>
+						<li><a href="/b/bunkers/index.html">Bunkers</a></li>
+						<li><a href="/witnesses/perpetrator/burmeister-walter/index.html">Burmeister, Walter</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
