--- a/c/index.html
+++ b/c/index.html
@@ -20,38 +20,40 @@
 				C
 			</h2>
 			<div class="columns">
-				<ul>
-					<li><a href="/c/camps/index.html">Camps</a></li>
-					<li><a href="/c/carbon-monoxide/index.html">Carbon Monoxide</a></li>
-					<li><a href="/categories/concept/censorship/index.html">Censorship</a></li>
-					<li><a href="/c/censorship/index.html">Censorship</a></li>
-					<li><a href="/witnesses/victim/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
-					<li><a href="/witnesses/victim/chasan-shaul/index.html">Chasan, Shaul</a></li>
-					<li><a href="/c/chelmno/index.html">Chełmno</a></li>
-					<li><a href="/witnesses/victim/chomka-wladyslaw/index.html">Chomka, Władysław</a></li>
-					<li><a href="/witnesses/perpetrator/christophersen-thies/index.html">Christophersen, Thies</a></li>
-					<li><a href="/witnesses/victim/chybinski-stanislaw/index.html">Chybiński, Stanisław</a></li>
-					<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
-					<li><a href="/categories/concepts/code-language/index.html">Code Language</a></li>
-					<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
-					<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
-					<li><a href="/categories/concept/compensation/index.html">Compensation</a></li>
-					<li><a href="/categories/concepts/compensation/index.html">Compensation</a></li>
-					<li><a href="/c/concentration-camps/index.html">Concentration Camps</a></li>
-					<li><a href="/categories/concepts/construction-office/index.html">Construction Office</a></li>
-					<li><a href="/categories/concepts/convergence-of-evidence/index.html">Convergence of Evidence</a></li>
-					<li><a href="/c/corpse-photos/index.html">Corpse Photos</a></li>
-					<li><a href="/witnesses/false-witness/corry-joe/index.html">Corry, Joe</a></li>
-					<li><a href="/manipulation/cremation-propaganda/index.html">Cremation Propaganda</a></li>
-					<li><a href="/c/crematoria/index.html">Crematoria</a></li>
-					<li><a href="/categories/concepts/criminal-traces/index.html">Criminal Traces</a></li>
-					<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
-					<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
-					<li><a href="/witnesses/victim/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
-					<li><a href="/persons/propagandist/czech-danuta/index.html">Czech, Danuta</a></li>
-					<li><a href="/locations/country/czechia/index.html">Czechia</a></li>
-					<li><a href="/witnesses/victim/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
-				</ul>
+				<div id="toc">
+					<ul>
+						<li><a href="/c/camps/index.html">Camps</a></li>
+						<li><a href="/c/carbon-monoxide/index.html">Carbon Monoxide</a></li>
+						<li><a href="/categories/concept/censorship/index.html">Censorship</a></li>
+						<li><a href="/c/censorship/index.html">Censorship</a></li>
+						<li><a href="/witnesses/victim/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
+						<li><a href="/witnesses/victim/chasan-shaul/index.html">Chasan, Shaul</a></li>
+						<li><a href="/c/chelmno/index.html">Chełmno</a></li>
+						<li><a href="/witnesses/victim/chomka-wladyslaw/index.html">Chomka, Władysław</a></li>
+						<li><a href="/witnesses/perpetrator/christophersen-thies/index.html">Christophersen, Thies</a></li>
+						<li><a href="/witnesses/victim/chybinski-stanislaw/index.html">Chybiński, Stanisław</a></li>
+						<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
+						<li><a href="/categories/concepts/code-language/index.html">Code Language</a></li>
+						<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
+						<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
+						<li><a href="/categories/concept/compensation/index.html">Compensation</a></li>
+						<li><a href="/categories/concepts/compensation/index.html">Compensation</a></li>
+						<li><a href="/c/concentration-camps/index.html">Concentration Camps</a></li>
+						<li><a href="/categories/concepts/construction-office/index.html">Construction Office</a></li>
+						<li><a href="/categories/concepts/convergence-of-evidence/index.html">Convergence of Evidence</a></li>
+						<li><a href="/c/corpse-photos/index.html">Corpse Photos</a></li>
+						<li><a href="/witnesses/false-witness/corry-joe/index.html">Corry, Joe</a></li>
+						<li><a href="/manipulation/cremation-propaganda/index.html">Cremation Propaganda</a></li>
+						<li><a href="/c/crematoria/index.html">Crematoria</a></li>
+						<li><a href="/categories/concepts/criminal-traces/index.html">Criminal Traces</a></li>
+						<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
+						<li><a href="/witnesses/victim/cykert-abraham/index.html">Cykert, Abraham</a></li>
+						<li><a href="/witnesses/victim/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
+						<li><a href="/persons/propagandist/czech-danuta/index.html">Czech, Danuta</a></li>
+						<li><a href="/locations/country/czechia/index.html">Czechia</a></li>
+						<li><a href="/witnesses/victim/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
+					</ul>
+				</div>
 			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
